added bonanzaDisplay support
